tests/com.e1c.dt.check.form.itests/workspace/InvalidItemIdCheck/src/Catalogs/Catalog/Forms/DefaultListForm/Attributes/List/ExtInfo/ListSettings.dcss
<?xml version="1.0" encoding="UTF-8"?>
<Settings xmlns="http://v8.1c.ru/8.1/data-composition-system/settings" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:dcscor="http://v8.1c.ru/8.1/data-composition-system/core">
	<filter>
		<viewMode>Normal</viewMode>
		<userSettingID>5d7ac784-900b-4fd1-8763-fee108ae893a</userSettingID>
	</filter>
	<order>
		<viewMode>Normal</viewMode>
		<userSettingID>bad3d95a-41d7-42d8-9747-5f6bac6bb4e7</userSettingID>
	</order>
	<conditionalAppearance>
		<viewMode>Normal</viewMode>
		<userSettingID>fc0bab81-d4d6-4575-b7a5-9b70e035aeaa</userSettingID>
	</conditionalAppearance>
	<itemsViewMode>Normal</itemsViewMode>
	<itemsUserSettingID>19623d4e-c51c-443b-98ee-27a8d7d3bd32</itemsUserSettingID>
</Settings>
